edited base url

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://shagufta24.github.io"
+baseURL: "https://shagufta.codes"
 languageCode: "en-us"
 title: "Hugo Profile"
 theme: hugo-profile
