Added projects, updated achievements

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://shagufta.codes"
 languageCode: "en-us"
-title: "Hugo Profile"
+title: "Shagufta Anjum"
 theme: hugo-profile
 
 outputs:
@@ -21,43 +21,43 @@ markup:
     renderer:
       unsafe: true
 
-Menus:
-  main:
-    - identifier: blog
-      name: Blog
-      title: Blog posts
-      url: /blogs
-      weight: 1
+# Menus:
+#   main:
+#     - identifier: blog
+#       name: Blog
+#       title: Blog posts
+#       url: /blogs
+#       weight: 1
 
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
+#     - identifier: gallery
+#       name: Gallery
+#       title: Blog posts
+#       url: /gallery
+#       weight: 2
 
-    #Dropdown menu
-    # - identifier: dropdown
-    #   title: Example dropdown menu
-    #   name: Dropdown
-    #   weight: 3
-    # - identifier: dropdown1
-    #   title: example dropdown 1
-    #   name: example 1
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 1
-    # - identifier: dropdown2
-    #   title: example dropdown 2
-    #   name: example 2
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 2
+#Dropdown menu
+# - identifier: dropdown
+#   title: Example dropdown menu
+#   name: Dropdown
+#   weight: 3
+# - identifier: dropdown1
+#   title: example dropdown 1
+#   name: example 1
+#   url: /#
+#   parent: dropdown
+#   weight: 1
+# - identifier: dropdown2
+#   title: example dropdown 2
+#   name: example 2
+#   url: /#
+#   parent: dropdown
+#   weight: 2
 
 params:
   title: "Shagufta Anjum"
-  description: Text about my cool site
+  description: This is my personal website.
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/images/sa.jpg"
+  favicon: "/images/my-logo.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -203,14 +203,8 @@ params:
           name: "Mahindra University"
           url: "https://www.mahindrauniversity.edu.in"
         date: "2019 - 2023"
-        GPA: "8.9 out of 10.0"
-        content: |-
-          I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-          - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-          - Face mask detection using a single convolutional neural network.
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
+        GPA: "8.9 out of 10.0, Class Rank: 5"
+        # content:
         # featuredLink:
         #   enable: true
         #   name: "My academic record"
@@ -231,87 +225,108 @@ params:
     # title: "Custom Name"
     items:
       - title: Academic Scholaships - Rs. 1,00,000 each
-        content: Awarded three times for outstanding academic performance.
+        content: Awarded three times (2019, 2021, 2022) for outstanding academic performance.
       - title: Winner - Smart India Hackathon by Government of India
-        content: Built a mobile app that allows users to try on turbans virtually.
+        content: Built a mobile app that allows users to try on 3D models of turbans virtually.
         # url: https://example.com
       - title: Winner - Hack-week at Mahindra University
-        content: Developed software that simulated the Game of Life.
+        content: Developed a 2D platform type game similar to Super Mario Bros.
       - title: President - Alumni Relations Centre at Mahindra University
-        content: Led a team of 30 students. Organized several alumni events.
+        content: Led a team of 30 students. Organized several alumni events. Set up the official alumni portal for my university.
       - title: Vice President - Street Cause NGO
-        content: Worked to provide assistance to orphanages in Hyderabad.
+        content: Provided assistance to orphanages and old-age homes in Hyderabad.
       - title: Head of organizing team - Mahindra University's Annual Research Symposium
-        content: Led a team of 8 to organize the large-scale event.
+        content: Led a team of 8 to organize the large-scale event attended by reputed researchers from across India.
 
   # projects
   projects:
     enable: true
     # title: "Custom Name"
     items:
-      - title: Hugo Profile
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-        image: /images/projects/profile.png
+      - title: Multi-objective Evolutionary Neural Architecture Search for Autoencoders
+        content: Developed an algorithm to perform neural architecture search for autoencoder architectures using differential evolution to simultaneously minimize the number of latent variables, total parameters, and the error in recovery of the original inputs at the output layer. Implemented concurrent task apportioning on hybrid CPU-GPU architectures for efficient training of the neural networks.
+        image: /images/projects/nas.png
         featured:
-          name: Demo
-          link: https://hugo-profile.netlify.app
+          name: Code
+          link: https://github.com/shagufta24/de-moo.git
         # badges:
         #   - "Hugo"
         #   - "Bootstrap"
         #   - "Javascript"
-        links:
-          - icon: fa fa-envelope
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/hugo-profile
-          - icon: fab fa-twitter
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+        # links:
+        # - icon: fa fa-envelope
+        #   url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
+        # - icon: fab fa-github
+        #   url: https://github.com/gurusabarish/hugo-profile
+        # - icon: fab fa-twitter
+        #   url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
 
-      - title: Image Converter
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-        image: /images/projects/converter.jpg
+      - title: Leveraging Network Similarity Measures for Recommendation Systems
+        content: Designed a recommendation system for e-commerce products using memory-based and model-based collaborative filtering techniques. Proposed a novel method of graph-based recommendation based on local node similarity metrics from the product-user network. Published in International Conference on Emerging Techniques in Computational Intelligence (ICETCI), 2022.
+        image: /images/projects/amazon.png
         featured:
-          name: Demo
-          link: https://django-converter.herokuapp.com
+          name: Code
+          link: https://github.com/shagufta24/amazon-recsys.git
         # badges:
         #   - "Django"
         #   - "Bootstrap"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
+        # links:
+        #   - icon: fab fa-github
+        #     url: https://github.com/gurusabarish/converter
 
-      - title: Hugo Profile V2
-        content: A clean and simple Hugo template for personal portfolio and blog.
-        image: /images/projects/profile2.jpg
+      - title: Low-level Fuzzy similarity Metrics for Music Recommendation
+        content: Extracted low-level acoustic features from raw music audio data using music information retrieval techniques for signal processing. Explored both time and frequency domains of the digitized audio signal and derived the corresponding spectrograms. Conceptualized a song recommendation system based on fuzzy clustering of user preferences using inter and intra genre song similarities.
+
+        image: /images/projects/music.jpg
         featured:
-          name: Demo V2
-          link: https://hugo-profile-2.netlify.app
+          name: Code
+          link: https://github.com/shagufta24/music-recommender.git
         # badges:
         #   - "Hugo"
         #   - "Bootstrap"
         #   - "Javascript"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/HugoProfileV2
+        # links:
+        #   - icon: fab fa-github
+        #     url: https://github.com/gurusabarish/HugoProfileV2
+
+      - title: Local Community Member Detection in Social Networks
+        content: Developed a method to classify a pair of nodes in a complex network as belonging to the same community or not based solely on local node features such as centralities, distances and degree distribution. Applied machine learning classification algorithms such as SVMs, K-nearest neighbors and Random forests with Boosting.
+        # image: /images/projects/amazon.png
+        featured:
+          name: Code
+          link: https://github.com/shagufta24/community_detection.git
+
+      - title: Eyes for the Elderly - Object Localization for Assisted Living
+        content: Designed a solution to assist elderly people suffering from dementia and vision loss to find items around their home. The hardware prototype includes a wall-mounted camera integrated wirelessly with a voice assistant enabled app and object detection software. Trained a custom CNN object detection model to locate the relative position of objects in a confined environment under varying lighting and occlusion conditions.
+        # image: /images/projects/amazon.png
+        featured:
+          name: Code
+          link: https://github.com/shagufta24/object-det-yolov5.git
+
+      - title: Studying COVID spread using the Twitter Network
+        content: Gathered a dataset of over 500,000 tweets related to coronavirus from the Twitter API based on content and hashtags. Performed complex network-based analysis to investigate public perception, user sentiments and patterns of information dissemination.sing ML regression techniques to model the event-based propagation of information on Twitter and flow of tweets between different geographical locations and social groups.
+        # image: /images/projects/amazon.png
+        featured:
+          name: Code
+          link: https://github.com/shagufta24/twitter_scraper.git
 
   #Contact
   contact:
     enable: true
     #title: "Custom name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
-    btnName: Mail me
+    email: shagufta.0201@gmail.com
+    btnName: E-mail me
 
   footer:
     recentPosts:
-      title: Recent Posts
+      title: Social
       enable: true
       disableFeaturedImage: false
 
     socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
+      github: https://github.com/shagufta24
+      linkedin: https://www.linkedin.com/in/shaguftaanjum/
       instagram: https://instagram.com
       facebook: https://facebook.com
 
