--- a/config.yaml
+++ b/config.yaml
@@ -114,8 +114,8 @@ params:
     enable: true
     intro: "Hi, my name is"
     title: "Shagufta."
-    subtitle: "I am passionate about artifificial intelligence."
-    content: "I love exploring new use cases of machine learning and deep learning to solve real world problems. I am interested in AI research, particularly in computer vision and natural language processing."
+    subtitle: "I am an aspiring AI researcher and developer."
+    content: "I am passionate about exploring machine learning and deep learning to uncover novel applications to address real world challenges. Through my work, I want to leverage the transformative potential of AI and technology to create positive change."
     image: "/images/myself.png"
     button:
       enable: true
@@ -138,25 +138,60 @@ params:
     title: "About Me"
     image: "/images/desk.jpg"
     content: |-
-      I am a computer science and engineering undergrad student from Hyderabad, India. 
-      Over the years, I have developed a strong interest in machine learning and artificial intelligence, and I am currently working on a couple of research projects in this field.
-      I aspire to pursue a masters degree in computer science with a specialization in AI. My dream is to conduct cutting-edge research at an organization devoted to leveraging the power of AI for social good.
+      I am a Master of Computer Science student at the University of Illinois Urbana-Champaign (UIUC) in USA.
+      Over the years, I have developed a strong interest in AI through my education, work and research.
+      Doing research has helped me develop a strong foundation in both theoretical and applied ML, while my work experience has helped me learn about ML pipeline development, deployment and integration with business.
     skills:
       enable: true
-      title: "Here are a few topics that excite me:"
+      title: "Topics of interest:"
       items:
-        - "Real world applications of ML"
+        - "Generative AI"
         - "Natural Language Processing"
         - "Computer Vision"
         - "Ethical implications of AI"
-        - "Music Information Retrival"
-        - "Social network analysis"
+        - "Social Network Analysis"
+        - "Physics informed ML"
+        - "Informational Retrieval"
+        - "AI in Healthcare"
+
 
   # Experience
   experience:
     enable: true
-    title: "Experiences"
+    title: "Work Experience"
     items:
+    - job: "Machine Learning Engineer"
+        company: "Dell Technologies"
+        companyUrl: "https://www.dell.com"
+        date: "July 2023 - December 2023"
+        # featuredLink:
+        #   enable: true
+        #   url: "https://example.com"
+        # info:
+        #   enable: true
+        #   content: I worked as a software developer for more than one year in Amazon.
+        content: |
+          Led the development of a computer vision tool to identify improperly aligned or overlapping text on product labels printed in the Dell manufacturing facilities. Implemented real-time alerts to help in early diagnosis of the issue, and intgerated the model with the existing infrastructure.
+
+
+  # Experience
+  experience:
+    enable: true
+    title: "Internships"
+    items:
+    - job: "Software Engineer Co-op"
+        company: "Dell Technologies"
+        companyUrl: "https://www.dell.com"
+        date: "January 2023 - June 2023"
+        # featuredLink:
+        #   enable: true
+        #   url: "https://example.com"
+        # info:
+        #   enable: true
+        #   content: I worked as a software developer for more than one year in Amazon.
+        content: |
+          Developed a notification management system consisting of a feature-rich dashboard and robust backend APIs to deliver push notifications via a publisher-subscriber model and integrated it with existing systems.
+
       - job: "Machine Learning Intern"
         company: "Cognida.ai"
         companyUrl: "https://cognida.ai"
@@ -167,7 +202,7 @@ params:
         #   url: "https://example.com"
         content: "Building a writing assistant tool for academic papers using natural language processing techniques to review errors, suggest appropriate edits, detect plagiarism, paraphrase, and generate titles."
 
-      - job: "Software Engineer Intern"
+      - job: "Software Engineer Summer Intern"
         company: "Dell Technologies"
         companyUrl: "https://www.dell.com"
         date: "June 2020 - August 2021"
@@ -179,6 +214,19 @@ params:
         #   content: I worked as a software developer for more than one year in Amazon.
         content: |
           Worked in the global supply chain operations team to develop a system for the detection of errors in files being uploaded to AWS ECS instances. The system could also predict the file upload time using regression techniques.
+
+      - job: "Software Developer Intern"
+        company: "International Institue of Information Technology (IIIT-H)"
+        companyUrl: "https://www.iiit.ac.in"
+        date: "May 2022 - July 2022"
+        # featuredLink:
+        #   enable: true
+        #   url: "https://example.com"
+        # info:
+        #   enable: true
+        #   content: I worked as a software developer for more than one year in Amazon.
+        content: |
+          Developed an educational website with articles in regional Indian languages. Collected content via web scraping and used machine translation techniques to generate articles in different languages.
 
       - job: "Software Developer Intern"
         company: "Hitachi Vantara"
@@ -198,12 +246,23 @@ params:
     # title: "Custom Name"
     # index: true
     items:
+      - title: "Master of Computer Science"
+        school:
+          name: "University of Illinois Urbana-Champaign"
+          url: "https://illinois.edu"
+        date: "2024 - 2025"
+        GPA: ""
+        # content:
+        # featuredLink:
+        #   enable: true
+        #   name: "My academic record"
+        #   url: "https://example.com"
       - title: "Bachelor of Technology in Computer Science & Engineering"
         school:
           name: "Mahindra University"
           url: "https://www.mahindrauniversity.edu.in"
         date: "2019 - 2023"
-        GPA: "8.9 out of 10.0, Class Rank: 5"
+        GPA: "9.1 out of 10.0, Class Rank: 2"
         # content:
         # featuredLink:
         #   enable: true
@@ -219,30 +278,34 @@ params:
         #   enable: true
         #   url: "https://example.com"
 
-  # Achievements
-  achievements:
-    enable: true
-    # title: "Custom Name"
-    items:
-      - title: Academic Scholaships - Rs. 1,00,000 each
-        content: Awarded three times (2019, 2021, 2022) for outstanding academic performance.
-      - title: Winner - Smart India Hackathon by Government of India
-        content: Built a mobile app that allows users to try on 3D models of turbans virtually.
-        # url: https://example.com
-      - title: Winner - Hack-week at Mahindra University
-        content: Developed a 2D platform type game similar to Super Mario Bros.
-      - title: President - Alumni Relations Centre at Mahindra University
-        content: Led a team of 30 students. Organized several alumni events. Set up the official alumni portal for my university.
-      - title: Vice President - Street Cause NGO
-        content: Provided assistance to orphanages and old-age homes in Hyderabad.
-      - title: Head of organizing team - Mahindra University's Annual Research Symposium
-        content: Led a team of 8 to organize the large-scale event attended by reputed researchers from across India.
-
   # projects
   projects:
     enable: true
     # title: "Custom Name"
+    
     items:
+
+      - title: Solving Differential Equations using Physics Informed Neural Networks
+        content: Attempted to establish physics informed neural networks (PINNs) as a valid approach to resolve complex aerodynamic phenomena by approximating solutions of the Navier-Stokes equations using PINNs. Modelled a cost function using DE residues to allow the networks to learn the DE solution.
+        # image: 
+        # featured:
+        #   name: 
+        #   link: 
+        # badges:
+        #   - "Hugo"
+        #   - "Bootstrap"
+        #   - "Javascript"
+        # links:
+        # - icon: fa fa-envelope
+        #   url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
+        # - icon: fab fa-github
+        #   url: https://github.com/gurusabarish/hugo-profile
+        # - icon: fab fa-twitter
+        #   url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+
+       - title: Domain-relevant Statistical Learning of Images in GANs
+         content: Getting Generative Adversarial Networks (GANs) to generate images which are not only visually realistic, but also preserve domain-specific statistics features that are found in real data. Using the StyleGAN-2 architecture with a medical image dataset to generate images that preserve medical statistics such as fat tissue area, glandular tissue area, etc.
+
       - title: Multi-objective Evolutionary Neural Architecture Search for Autoencoders
         content: Developed an algorithm to perform neural architecture search for autoencoder architectures using differential evolution to simultaneously minimize the number of latent variables, total parameters, and the error in recovery of the original inputs at the output layer. Implemented concurrent task apportioning on hybrid CPU-GPU architectures for efficient training of the neural networks.
         image: /images/projects/nas.png
@@ -310,11 +373,31 @@ params:
           name: Code
           link: https://github.com/shagufta24/twitter_scraper.git
 
+
+  # Achievements
+  achievements:
+    enable: true
+    # title: "Custom Name"
+    items:
+      - title: Academic Scholaships - Rs. 1,00,000 each
+        content: Awarded three times (2019, 2021, 2022) for outstanding academic performance.
+      - title: Winner - Smart India Hackathon by Government of India
+        content: Built a mobile app that allows users to try on 3D models of turbans virtually.
+        # url: https://example.com
+      - title: Winner - Hack-week at Mahindra University
+        content: Developed a 2D platform type game similar to Super Mario Bros.
+      - title: President - Alumni Relations Centre at Mahindra University
+        content: Led a team of 30 students. Organized several alumni events. Set up the official alumni portal for my university.
+      - title: Vice President - Street Cause NGO
+        content: Provided assistance to orphanages and old-age homes in Hyderabad.
+      - title: Head of organizing team - Mahindra University's Annual Research Symposium
+        content: Led a team of 8 to organize the large-scale event attended by reputed researchers from across India.
+
   #Contact
   contact:
     enable: true
     #title: "Custom name"
-    content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
+    content: My inbox is always open.
     email: shagufta.0201@gmail.com
     btnName: E-mail me
 
